added new html content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="main">
-	<div id="name">Alexandria
+	<div id="name">Alexandria Lim
 		</div>	
 		<div>
 			<div class="title">Kalani High School Student</div>
