--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
 </head>
 <body>
 <div id="main">
-	<div id="name">Alexandria Lim
-		</div>	
+	<div id= "header">
+		<div id="name">Alexandria Lim</div>	
+		<div class="title">Kalani High School Student</div>
 		<div>
-			<div class="title">Kalani High School Student</div>
+			<span class="circle"></span>
+			<span class="circle"></span>
+			<span class="circle"></span>
 		</div>
-		<div class="circle"></div>
-		<div class="content_wrapper">
-		 <p>
-		 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		 </p>
-		</div>
+	</div>	
+	<div id="space"></div>
+	<div id="block"></div>
+	<div class="content_wrapper"></div>	
+</div>
+
+
 </body>
 </html>
