--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	</div>	
 	<div id="space"></div>
 	<div id="block"></div>
+	<div id="space"></div>
+	<img src="lined paper">
 	<div class="content_wrapper"></div>	
 </div>
 
