--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	<div id="space"></div>
 	<div id="block"></div>
 	<div id="space"></div>
+	<div id="about me">About Me</div>
 	<img src="lined paper">
-	<div class="content_wrapper"></div>	
+	<div class="content_wrapper">Lorem ipsum dolor sit amet...</div>
 </div>
 
 
