--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="space"></div>
 	<div id="block"></div>
 	<div id="space"></div>
-	<div id="about me">About Me</div>
+	<div id="about_me">About Me</div>
 	<img src="lined paper">
 	<div class="content_wrapper">Lorem ipsum dolor sit amet...</div>
 </div>
