--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="space"></div>
 	<div id="about_me">About Me</div>
 	<img src="lined paper">
-	<div class="content_wrapper">Lorem ipsum dolor sit amet...</div>
+	<div class="content_wrapper">Lorem ipsum dolor~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</div>
 </div>
 
 
