--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div id="block"></div>
 	<div id="space"></div>
 	<div id="about_me">About Me:</div>
-	<img src="lined paper">
+	<img src="lined paper" ref=Pictures/lined_paper>
 	<div class="content_wrapper">Lorem ipsum dolor~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</div>
 </div>
 
