almost completed project

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 			<span class="circle"></span>
 		</div>
 	</div>	
+	<div class="image_container">
+		<img src="images/down_arrow.png" class="resize">
+		</div>
 	<div id="space"></div>
 	<div id="block"></div>
-	<div id="space"></div>
-	<div id="about_me">About Me:</div>
-	<div class="content_wrapper">Lorem ipsum dolor~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</div>
+	<div class="content_wrapper">
+		<div id="about_me">About Me:</div>
+		<div class="text">Lorem ipsum dolor~~~~~~~~~~ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum dignissimos temporibus cumque asperiores officiis dolorum, facilis facere, quae obcaecati eligendi neque molestiae, deserunt voluptate dolorem ad dolores assumenda accusantium. Iure.</div>
+	</div>
 </div>
 
 
